# mu2e_pcie_utils

./: .gitignore  CMakeLists.txt  Makefile.~2~  Module.symvers  dkms.conf  driver_test.sh  k7_trd_lin_quickstart  make.out  make.out.1st  readme.txt  setup_dkms.sh
Modules/: NodeJSAddon.cmake  package.json.in
cfoInterfaceLib/: CFO.cc  CFO.cpp  CFO.h  CFO.i  CFOLibTest.cc  CFOLibTest.cpp  CFOLibTest.h  CFOLibTest.i  CFOSoftwareCFO.cpp  CFOSoftwareCFO.h  CFO_Compiler.cpp  CFO_Compiler.hh  CFO_Packets.cpp  CFO_Packets.h  CFO_Registers.cpp  CFO_Registers.h  CFO_Types.cc  CFO_Types.cpp  CFO_Types.h  CMakeLists.txt  Commands.txt  README.txt  Setup_CFO.sh  binding.gyp  build.sh  cfoRegDump.cc  cfodev.cpp  cfodev.h  cfosim.cpp  cfosim.h  main.cc  mu2eCompiler.cc  mu2edev.cc  mu2edev.hh  mu2esim.cc  mu2esim.hh  my_cntl.cc  util_main.cc
cfoInterfaceLib/Win32/: CFOLibTest.vcxproj  CFOLibTest.vcxproj.filters  CFORegDump.vcxproj  CFORegDump.vcxproj.filters  cfoInterfaceLib.sln  cfoInterfaceLib.vcxproj  cfoInterfaceLib.vcxproj.filters  util.vcxproj  util.vcxproj.filters  web.njsproj  web.sln
cfoInterfaceLib/web/: README.md  client.html  serverbase.js
cfoInterfaceLib/web/certs/: ca.crt  server.key
cfoInterfaceLib/web/modules/CFO/client/: DMATest.html  DMATest.js  DMATest2.html  DMATest2.js  PerfMon.css  PerfMon.html  PerfMon.js  ReadoutRequestPacket.html  client.html  client.js
cfoInterfaceLib/web/modules/CFO/server/: CFO_module.js
cfoInterfaceLib/web/modules/DTC/client/: DMATest2.html  DMATest2.js  style.css
cfoInterfaceLib/web/modules/base/client/: AjaxPostAndGet.js  MakeGraph.js
cfoInterfaceLib/web/modules/base/server/: base_module.js
cfo_driver/: CMakeLists.txt  Kbuild  Makefile  cfo_event.c  cfo_event.h  cfo_fs.c  cfo_fs.h  cfo_main.c  cfo_mmap_ioctl.h  cfo_pci.c  cfo_pci.h  cfo_proto_globals.h  mu2e_event.h  mu2e_mmap_ioctl.h  xdma_hw.h
doc/: CMakeLists.txt  Doxyfile.in
dtcInterfaceLib/: CMakeLists.txt  DTC.cc  DTC.cpp  DTC.h  DTC.i  DTCLibTest.cc  DTCLibTest.cpp  DTCLibTest.h  DTCLibTest.i  DTCSoftwareCFO.cc  DTCSoftwareCFO.cpp  DTCSoftwareCFO.h  DTC_Data_Verifier.h  DTC_Packets.cc  DTC_Packets.cpp  DTC_Packets.h  DTC_Registers.cc  DTC_Registers.cpp  DTC_Registers.h  DTC_Types.cc  DTC_Types.cpp  DTC_Types.h  DTC_binary_file_compare.cc  JAConfig.sh  Mu2eUtil.cpp  Mu2eUtil.h  Setup_DTC.sh  binary_dump_to_DTC_file.cc  binding.gyp  build.sh  copyToMu2e.sh  data_file_verifier.cc  dcs_main.cc  dtcRegDump.cc  fragmentTester.cpp  fragmentTester.h  main.cc  mu2edev.cc  mu2edev.cpp  mu2edev.h  (+14 more)
dtcInterfaceLib/Win32/: .gitignore  DTCLibTest.vcxproj  DTCLibTest.vcxproj.filters  DTCRegDump.vcxproj  DTCRegDump.vcxproj.filters  Web.njsproj  dcs.vcxproj  driverBuild.sh  dtcInterfaceLib.sln  dtcInterfaceLib.vcxproj  dtcInterfaceLib.vcxproj.filters  mymodule2.vcxproj  mymodule2.vcxproj.filters  packetGenerator.vcxproj  packetReader.vcxproj  requestSender.vcxproj  requestSender.vcxproj.filters  tester.vcxproj  util.vcxproj
dtcInterfaceLib/Win32/mcs/: mcs  mcs.vcxproj
dtcInterfaceLib/Win32/mu2e_driver/: mu2e_driver.vcxproj  packages.config
dtcInterfaceLib/test/: CMakeLists.txt  dtcUnitTests.cc  fragmentTester.h  packetGenerator.cc  packetReader.cc  sizeof_buffdesc.cc  tester.cc
dtcInterfaceLib/web/: DTCDriver.js  MakeGraph.js  PerfMon.html  PerfMon.js  README  client.html  client.js  serverbase.js  style.css  template.html.in
dtcInterfaceLib/web/certs/: ca.crt  server.crt
dtcInterfaceLib/web/client/: PerfMon.js  client.html  client.js
dtcInterfaceLib/web/modules/DTC/client/: DCSRequestPacket.html  DMATest.html  DMATest.js  DMATest2.html  DMATest2.js  DataRequestPacket.html  PerfMon.css  PerfMon.js  ReadoutRequestPacket.html  client.html  client.js  style.css
dtcInterfaceLib/web/modules/DTC/server/: DTC_module.js  gmetric.node
dtcInterfaceLib/web/modules/base/client/: AjaxPostAndGet.js  MakeGraph.js  ReadServerLog.html
dtcInterfaceLib/web/modules/base/server/: base_module.js
include/: xdma_user.h  xdma_user.h.~1~  xio.h.~1~
linux_driver/: .gitignore  CMakeLists.txt  Makefile
linux_driver/develmodule/: CMakeLists.txt  Makefile  pci_devel_main.c  pcidevl_ioctl.h
linux_driver/develuser/: CMakeLists.txt  Makefile  devl  devl.cc
linux_driver/include/: trace.h  xbasic_types.h  xdebug.h  xdma_user.h  xio.h  xpmon_be.h  xstatus.h
linux_driver/mymodule/: Kbuild  Makefile  mu2e_event.c  mu2e_fs.c  mu2e_ioctl.h  mu2e_main.c  mu2e_mmap_ioctl.h  mu2e_pci.c  mu2e_pci.h  mu2e_proto_globals.h  xbasic_types.h  xdma_hw.h  xio.h
linux_driver/mymodule2/: CMakeLists.txt  mu2e_event.c  mu2e_event.h  mu2e_fs.c  mu2e_fs.h  mu2e_main.c  mu2e_mmap_ioctl.h  mu2e_pci.c  mu2e_pci.h  mu2e_proto_globals.h  xdma_hw.h
linux_driver/trace/: Kbuild  (+3 more)
mcs/: .gitignore  CMakeLists.txt  Makefile  devl.cc  mcs.cc  mcs.sh
mcs/basic_driver/: CMakeLists.txt  Kbuild  Makefile  dkms.conf  pci_devel_main.c  pcidevl_ioctl.h
mu2e_driver/: CMakeLists.txt  Kbuild  dkms.conf  mu2e_event.c  mu2e_event.h  mu2e_fs.c  mu2e_fs.h  mu2e_main.c  mu2e_mem.c  mu2e_mem.h  mu2e_mmap_ioctl.h  mu2e_pci.c  mu2e_pci.h  mu2e_proto_globals.h  xdma_hw.h
tools/: CMakeLists.txt  make_test_file.sh  rate_test.sh  switch_test.sh
ups/: product_deps
xdma/: .built-in.o.cmd  .xdma.o.cmd  .xdma_base.o.cmd  .xdma_bdring.o.cmd  .xdma_k7.ko.cmd  .xdma_k7.ko.unsigned.cmd  .xdma_k7.mod.o.cmd  .xdma_k7.o.cmd  .xdma_user.o.cmd  Makefile  make.out  modules.order  xdma.c.~1~  xdma.h  xdma.h.~1~  xdma_base.c  xdma_base.c.~2~  xdma_base.c.~3~  xdma_base.c.~4~  xdma_base.c.~5~  xdma_base.c.~6~  xdma_bd.h  xdma_bdring.c  xdma_bdring.c.~1~  xdma_bdring.h.~1~  xdma_k7.ko.unsigned  xdma_k7.mod.c  xdma_user.c  xdma_user.c.~1~
xpmon/: ConfigGui.c
xrawdata0/: .built-in.o.cmd  .sguser.o.cmd  .xrawdata0.ko.cmd  .xrawdata0.ko.unsigned.cmd  .xrawdata0.mod.o.cmd  .xrawdata0.o.cmd  modules.order  sguser.c  xrawdata0.ko.unsigned  xrawdata0.mod.c
xrawdata1/: .built-in.o.cmd  .sguser.o.cmd  .xrawdata1.ko.cmd  .xrawdata1.ko.unsigned.cmd  .xrawdata1.mod.o.cmd  .xrawdata1.o.cmd  Makefile  modules.order  sguser.c  xrawdata1.ko  xrawdata1.mod.c
(+35 files in other folders)
